# amsatop

./: flake.nix  pyproject.toml
.github/workflows/: publish_docs.yml  publish_pypi.yml
docs/: conf.py  index.rst
src/amsatop/: __init__.py
src/amsatop/_htop/: __init__.py  htop.py  htop_mock.py
src/amsatop/_ui/: __init__.py  state.py
src/amsatop/htop/: __init__.py  htop.py  htop_mock.py  process.py
src/amsatop/ui/: __init__.py  state.py  tui.py
src/amsatop/utils/: __init__.py
